--- a/pub_autor_do_mes.html
+++ b/pub_autor_do_mes.html
@@ -32,7 +32,7 @@ guitarra. Em 2020 publicará dois ensaios e um novo romance. <br>
                 background-color:#1899ac;
                 box-shadow:2px 3px 4px rgba(0,0,0,.4);"
           onMouseOver="this.style.boxShadow='2px 3px 4px rgba(0,0,0,.4)';
-                      this.style.backgroundColor='#597889'";
+                      this.style.backgroundColor='#26c8e0'";
          onMouseOut="this.style.boxShadow='2px 3px 4px rgba(0,0,0,.4)';
                      this.style.backgroundColor='#1899ac';"
          onMouseDown="this.style.boxShadow='0 0 0 rgba(0,0,0,0)';"
