--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       
 
       <footer>
-      <script src="scripts.js"></script>
+      <script src="script.js"></script>
       </footer> 
 </body>
 </html>
