--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        <button  onclick="report();" > Confirmar </button> 
         </form> 
 <div id="aqui">  </div>
-         
+      <div id="lista"></div>       
           </div>
       
 
