--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         
       </header>
   <div class="container">
-        <form >
+        <div class="form">
           <label for="data_1">Data Inicio:</label>
           <input type="date" id="data_1" value="2021-10-01">
 
           <label for="data_2">Data Final:</label>
           <input type="date" id="data_2" value="2021-12-01">
           <br>
-       <button  onclick="report();" > Confirmar </button> 
-        </form> 
+       <button  onclick="report()" > Confirmar </button> 
+        </div> 
 <div id="aqui">  </div>
       <div id="lista"></div>       
           </div>
