--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <label for="data_2">Data Final:</label>
           <input type="date" id="data_2" value="2021-12-01">
           <br>
-       <button  onclick="report()" > Confirmar </button> 
+       <button class="btn btn-small" onclick="report()" > Confirmar </button> 
         </div> 
 <div id="aqui">  </div>
       <div id="lista"></div>       
