--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" type="text/css" href="https://koha/opac-tmpl/bootstrap/css/keeps/frontoffice.css" />
     <link rel="stylesheet" type="text/css" media="print" href="https://koha/opac-tmpl/bootstrap/css/print.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
