--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
        <button class="btn btn-small" onclick="report()" > Confirmar </button> 
         </div> 
 <div id="aqui">  </div>
+      
+      <input type="text" id="search" onkeyup="procurar()" placeholder="Procurar relatório..." title="Procurar Relatório"> 
       <div id="lista"></div>       
           </div>
       
